<resources>
    <string name="app_name">WorkshiftLogger</string>
    <string name="file_provider_authority" translatable="false">com.ajna.workshiftlogger.fileprovider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invoices">Invoices</string>
    <string name="clients">Clients</string>
    <string name="projects">Projects</string>
    <string name="shifts">Shifts</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>

    <string name="name">Name</string>
    <string name="official_name_optional">Official name (optional)</string>
    <string name="address_optional">Address (optional)</string>
    <string name="payment_type">Payment type</string>
    <string name="flat_rate">Flat rate</string>
    <string name="per_hour">Per hour</string>
    <string name="payment_flat_or_per_hour">Payment (Flat or Per Hour)</string>
    <string name="eur">EUR</string>
    <string name="overhour_payment_factors">Overhour payment factors</string>
    <string name="save">Save</string>
    <string name="percent_sign">%</string>
    <string name="h">h</string>
    <string name="delete">Delete</string>
    <string name="e_g_12">e.g. 12</string>
    <string name="starting_from_hour">Starting from hour</string>
    <string name="payment">Payment [%]</string>
    <string name="e_g_120">e.g. 120</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="project_name">Project name</string>
    <string name="select_client">Select client..</string>
    <string name="client_must_be_selected">Client must be selected</string>
    <string name="add_factor">Add factor</string>
    <string name="no_active_shift">No active shift</string>
    <string name="quick_start">Quick start</string>
    <string name="log_finished_shift">Log finished shift</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="message_successfull_added">Your shift has been successfully added</string>
    <string name="message_problem_adding">There was a problem with adding the shift..</string>
    <string name="default_empty_text_value">-</string>
    <string name="create_pdf">Create pdf</string>
    <string name="folder_name">WorkShiftLogger</string>
    <string name="active_shift">Active shift</string>
    <string name="finished">Finished</string>
    <string name="allow_storage_message">To create invoices you need to allow storage access</string>
</resources>
