<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shifts"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/shifts" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/clients" />
        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/invoices" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
